доработки лоадер, отступы

--- a/styles/blocks/_transportation-cost.scss
+++ b/styles/blocks/_transportation-cost.scss
@@ -1,6 +1,12 @@
 @use "../helpers"as *;
 
 .transportation-cost {
+    padding-top: 150px;
+
+    @include tablet{
+        padding-top: 100px;
+    }
+
     &__wrap {
         display: flex;
         flex-direction: column;
