--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -56,7 +56,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-Bold.woff2') format('woff2');
+    src: url('../fonts/InterBold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
