футер правка шрифта на моб

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -218,6 +218,9 @@
         align-items: center;
         font-size: 18px;
         color: var(--color-light);
+        @include mobile {
+            font-size: 14px;
+        }
     }
     &__copyright{
         a{
