--- a/styles/main.css
+++ b/styles/main.css
@@ -2809,6 +2809,7 @@ a.is-active {
 .cargo-types__modal-inner {
   display: grid;
   justify-content: center;
+  align-content: flex-start;
   background-color: var(--color-base);
   width: 100%;
   max-width: 1000px;
@@ -2867,6 +2868,7 @@ a.is-active {
   font-size: 24px;
   line-height: 1.20833;
   color: var(--color-blue);
+  margin-bottom: 30px;
 }
 @media (width <= 63.99875rem) {
   .cargo-types__modal-title {
