--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -181,6 +181,12 @@
                     @include tablet {
                         width: 28px;
                         height: 28px;
+                        aspect-ratio: 1;
+                        svg{
+                            width: 12px;
+                            height: 8px;
+
+                        }
                     }
                 
             }
@@ -202,7 +208,7 @@
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
-        justify-content: center;
+        align-content: center;
         align-items: center;
         z-index: 999;
         opacity: 0;
@@ -305,8 +311,9 @@
         display: grid;
         grid-template-columns: auto 60px;
         justify-content: center;
-        width: 99%;
+        width:98%;
         height: 100%;
+        // height: max-content;
         background-color: var(--color-base);
         padding-block: rem(100);
         border-radius: 20px;
