--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -87,7 +87,14 @@
         }
 
         @include mobile {
-            display: none;
+            font-size: 16px;
+            font-weight: bold;
+            padding-inline: 0px;
+            background-color: transparent;
+            color: var(--color-blue);
+        }
+        @include mobile-s{
+            font-weight:400;
         }
 
         &:hover {
@@ -249,7 +256,7 @@ a.is-active {
         padding: 0px 30px 80px 30px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 10%;
         height: 100%;
         overflow-y: auto;
 
