--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -190,7 +190,10 @@
 
             @include mobile {
                 margin-left: 0;
-                margin-right: auto;
+                justify-content: space-between;
+                justify-self: center;
+                max-width: 100%;
+                
             }
         }
     }
